@@ -385,7 +385,7 @@ static void print_version(void)
     (void)fprintf(stdout,
 		  "%s version %s\n"
 		  "    Database: %s\n"
-		  "Copyright (C) 2002-2005 Eric S. Raymond,\n"
+		  "Copyright (C) 2002-2006 Eric S. Raymond,\n"
 		  "    David Relson, Matthias Andree, Greg Louis\n\n"
 		  "%s comes with ABSOLUTELY NO WARRANTY.  "
 		  "This is free software, and\nyou are welcome to "
