@@ -70,7 +70,7 @@ static void print_version(void)
 {
     (void)fprintf(stdout,
 		  "%s version %s\n"
-		  "Copyright (C) 2002-2005 David Relson\n\n"
+		  "Copyright (C) 2002-2006 David Relson\n\n"
 		  "%s comes with ABSOLUTELY NO WARRANTY.  "
 		  "This is free software, and\nyou are welcome to "
 		  "redistribute it under the General Public License.  "
