@@ -15,6 +15,10 @@
 
 -------------------------------------------------------------------------------
 
+	2006-04-28
+
+	* Updated copyright dates.
+
 	2006-04-13
 
 	* Included additional config file options in bogofilter's
